<resources>
    <string name="app_name">JobTracker</string>
    <string name="add_job">Add Job</string>
    <string name="title">Назва вакансії</string>
    <string name="company">Компанія</string>
    <string name="city">Місто</string>
    <string name="salary">Зарплата</string>
    <string name="description">Опис</string>
    <string name="save">Зберегти</string>
    <string name="delete">Видалити</string>
    <string name="edit">Редагувати</string>
    <string name="favorite">Favorite</string>
    <string name="jobs">Вакансії</string>
    <string name="favorites">Обране</string>
    <string name="statistics">Статистика</string>
    <string name="all_jobs">Усього вакансій</string>
    <string name="totalJobs">0</string>
    <string name="in_favorite">В обраному</string>
    <string name="FavoriteJobs">0</string>
    <string name="StatisticStatus">Статистика статусів</string>
    <string name="applied_0">0</string>
    <string name="interview_0">0</string>
    <string name="offer_0">0</string>
    <string name="rejected_0">0</string>
    <string name="change_status">Змінити статус</string>
    <string name="sort">Сортування</string>
    <string name="filter">Фільтр</string>
    <string name="technical_0">0</string>
    <string name="active_jobs">Активні вакансії</string>
    <string name="ActiveJobs">Успішність пошуку роботи</string>
    <string name="SuccessRate">0%</string>
    <string name="applied_interview">Applied → Interview</string>
    <string name="AppliedToInterview">0%</string>
    <string name="interview_offer">Interview → Offer</string>
    <string name="InterviewToOffer">0%</string>
    <string name="ActiveToJobs">0</string>
    <string name="settings">Налаштування</string>
    <string name="export_to_pdf">Експорт у PDF</string>
    <string name="export_to_csv">Export у CSV</string>
    <string name="share_file">Поділитися файлом</string>
    <string name="back_copy_base">Резервна копія бази</string>
    <string name="clear_database">Очистити базу</string>
    <string name="about_app">Про додаток</string>
    <string name="no_favorite_jobs">❤️ Немає улюблених вакансій</string>
    <string name="empty_jobs">Поки що вакансій немає</string>
    <string name="export_data">Експорт даних</string>
    <string name="Security_data">Безпека даних</string>
    <string name="info">Інформація</string>
    <string name="all_statistic">Загальна статистика</string>
    <string name="visualization">Візуалізація</string>
    <string name="jobs_status">Статуси вакансій</string>
    <string name="effectivity_search">Ефективність пошуку</string>
    <string name="tagline">Відстежуйте свій кар\'єрний шлях</string>
</resources>